# docs/openapi.json
@@ -562,6 +562,53 @@
         }
       }
     },
+    "/api/calendars/{calendar_id}/color/": {
+      "patch": {
+        "summary": "Change calendar color",
+        "tags": ["Calendars"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "calendar_id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "example": "1" }
+          }
+        ],
+        "requestBody": {
+          "required": false,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "color": { "type": "string", "pattern": "^#[0-9A-Fa-f]{6}$", "example": "#039BE5" }
+                },
+                "required": ["color"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful update."
+          },
+          "400": {
+            "description": "Validation failed."
+          },
+          "403": {
+            "description": "Unable to change the color of a calendar without an invitation."
+          },
+          "404": {
+            "description": "Calendar not found."
+          }
+        }
+      }
+    },
     "/api/events": {
       "get": {
         "summary": "Get all events by user",
